# llm-markdown-generator

./: .gitignore  .llmconfig  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  FILE_TREE.md  IMPLEMENTATION_SUMMARY.md  README.md  mypy.ini  new-cli.py  pyproject.toml  test_api_keys.py  todo.md
.github/workflows/: python-publish.yml  python-tests.yml
.llmconfig/: PROJECT_PLAN.md
config/: config.yaml  cve_front_matter_schema.yaml  front_matter_schema.yaml
docs/: config_validation.md  error_handling.md  security_reports.md
examples/: README.md  error_handling_demo.py  generate_cve_report.py  generate_security_report.py  generate_specialized_content.py  generate_with_pydantic.py  test_plugin_system.py
examples/custom_plugins/: example_plugins.py
llmconfig/: PROJECT_ENHANCEMENT.md  USAGE_GUIDE.md
llmconfig/prompt-templates/: comparative_analysis.j2  daily_cve_report.j2  data_science_blog.j2  industry_trend_analysis.j2  javascript_blog.j2  product_review.j2  python_blog.j2  research_summary.j2  security_advisory.j2  technical_tutorial.j2
src/llm_markdown_generator/: __init__.py  cli.py  config.py  config_pydantic.py  error_handler.py  front_matter.py  generate_cve_report.py  generator.py  llm_provider.py  prompt_engine.py  token_tracker.py
src/llm_markdown_generator/plugins/: __init__.py  content_processor.py  cve_front_matter_enhancer.py  front_matter_enhancer.py
stubs/: textstat.pyi
tests/integration/: test_api_keys.py  test_cli.py  test_pipeline.py  test_plugin_integration.py  test_token_tracking.py
tests/unit/: test_config.py  test_config_pydantic.py  test_cve_front_matter_enhancer.py  test_error_handler.py  test_front_matter.py  test_generator.py  test_llm_provider.py  test_plugins.py  test_prompt_engine.py  test_token_tracker.py
